fix a bit of the spacing in sort by and title

--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -103,6 +103,7 @@
   padding: 0;
   list-style: none;
   .nav-item {
+    margin-top: -1em;
     display: inline-block;
     *display: inline;
     zoom: 1;
